# winfetch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  text.txt  xmake.lua
example/: cpu.cpp
src/: winfetch.cpp
